--- a/backend/composer.json
+++ b/backend/composer.json
@@ -15,7 +15,8 @@
         "guzzlehttp/guzzle": "^7.0",
         "laravel/framework": "^7.0",
         "laravel/sanctum": "^2.4",
-        "laravel/tinker": "^2.0"
+        "laravel/tinker": "^2.0",
+        "scriptburn/simple-debug": "^1.0"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^2.7",
