--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,19 +14,24 @@
   "dependencies": {
     "@nuxtjs/auth": "^4.9.1",
     "@nuxtjs/axios": "^5.12.1",
+    "@tailwindcss/forms": "^0.2.1",
     "@tailwindcss/ui": "^0.5.0",
+    "node-sass": "^5.0.0",
     "numeral": "^2.0.6",
-    "nuxt": "^2.14.3"
+    "nuxt": "^2.14.4",
+    "nuxt-purgecss": "^1.0.0",
+    "sass-loader": "^10.1.1",
+    "vue-tailwind": "^2.1.3"
   },
   "devDependencies": {
-    "babel-eslint": "^10.0.1",
-    "eslint": "^7.7.0",
     "@nuxtjs/eslint-config": "^3.1.0",
     "@nuxtjs/eslint-module": "^2.0.0",
+    "@nuxtjs/tailwindcss": "^3.0.0",
+    "babel-eslint": "^10.0.1",
+    "eslint": "^7.7.0",
     "eslint-config-prettier": "^6.10.0",
     "eslint-plugin-nuxt": ">=0.4.2",
     "eslint-plugin-prettier": "^3.1.4",
-    "@nuxtjs/tailwindcss": "^3.0.0",
     "prettier": "^2.0.5"
   }
 }
